--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Simple App</title>
 <body>
+<!--This is a comment for my git test-->
 	<button id="simple">Hello Simple App</button>
 	<button id="clear">Clear</button>
 	<div id="result"></div>
